fixing spacing of the instagram icon on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -78,4 +78,7 @@ footer {
     .form-container {
         margin-bottom: 10px;
     }
+    .black-text {
+        margin: 20px 0;
+    }
 }
